--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   font_awesome_flutter: ^10.2.1
   url_launcher: ^6.1.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
